fix xiaolumm mama register

--- a/shopmanager/flashsale/xiaolumm/templates/mama_contact.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_contact.html
@@ -38,7 +38,7 @@
   <div class="container">
     <p>恭喜{{ xlmm.weikefu }}，您离成为正式小鹿妈妈就差一步了，请扫描二维码加客服(<span class="text-warning">并提醒设置正式妈妈权限哦</span>)：</p>
     <a href="#" class="thumbnail">
-      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsqU4IdVkksEq4TMicYHR5yYUGsp4Duj56nDSicBNDsNXdwxbV7JJh8KhsCibgDHmHweQ34hKhDw2SHw/0?wx_fmt=jpeg" alt="...">
+      <img src="{{ kefu_url }}" alt="...">
     </a>
 
     <form action="{% url mama_confirm %}" method="POST">
