--- a/shopmanager/flashsale/xiaolumm/templates/search_order.html
+++ b/shopmanager/flashsale/xiaolumm/templates/search_order.html
@@ -9,6 +9,12 @@
     <style type="text/css" title="currentStyle">
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
         @import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
+
+        .fixed_div {
+            position: fixed;
+            bottom: 0px;
+            margin-right: 0px;
+        }
     </style>
 
 
@@ -34,21 +40,29 @@
             // 清空结点已经填写的内容
 
             function callback(result) {
-            $("#search_result").empty();
+                $("#search_result").empty();
                 $.each(result, function (d, v) {
                     $("<p data-toggle='modal'" +
-                            " data-target='.bs-example-modal-lg' onclick='order_detail(" + v.id + ")'>原&nbsp单&nbspID&nbsp： " + v.tid + "</p>" +
-                            "<p>收&nbsp&nbsp货&nbsp&nbsp人： " + v.receiver_name + "<br>" +
-                            "订单状态： " + v.status + "<br>" +
-                            "系统状态： " + v.sys_status + "<br>" +
-                            "发货日期： " + v.consign_time + "<br>" +
-                            "收获地址： " + v.address + "<br>" +
-                            "买家留言： " + v.buyer_message + "<br>" +
+                            " data-target='.bs-example-modal-lg' onclick='order_detail(" + v.id + ")'><span>原单ID： " + v.tid + "</span></p>" +
+                            "<div class='row'>" +
+                            "<div class='col-xs-6'><span onclick='put_msg(this)'>收货人： " + v.receiver_name + "</span></div>" +
+                            "<div class='col-xs-6'><span onclick='put_msg(this)'>发货日期： " + v.consign_time + "</span></div>" +
+                            "</div>" +
+
+                            "<div class='row'>" +
+                            "<div class='col-xs-6'><span onclick='put_msg(this)'>订单状态： " + v.status + "</span></div>" +
+                            "<div class='col-xs-6'><span onclick='put_msg(this)'>系统状态： " + v.sys_status + "</span></div>" +
+                            "</div>" +
+
+                            "<span onclick='put_msg(this)'>收获地址： " + v.address + "</span><br>" +
+                            "<span onclick='put_msg(this)'>买家留言： " + v.buyer_message + "</span><br>" +
                             "卖家备注： " + v.seller_memo + "<br>" +
-                            "物流公司： " + v.logistics_company + "<br>" +
-                            "物流编号： " + v.out_sid + "<br>" +
-                            "<hr style='height:5px;border:none;border-top:5px ridge green;' />" +
-                            "</p>"
+
+                            "<div class='row'>" +
+                            "<div class='col-xs-6'><span onclick='put_msg(this)'>物流公司： " + v.logistics_company + "</span></div>" +
+                            "<div class='col-xs-6'><span onclick='put_msg(this)'>物流编号： " + v.out_sid + "</span></div>" +
+                            "</div>" +
+                            "<hr style='height:2px;border:none;border-top:2px ridge green;margin-top: 0px;' />"
                     ).appendTo("#search_result");
                 });
             }
@@ -89,7 +103,7 @@
                     "系统状态： " + v.sys_status + "<br>" +
                     "退款状态： " + v.refund_status + "<br>" +
                     "付款时间： " + v.pay_time + "<br>" +
-                    "<hr style='height:2px;border:none;border-top:2px ridge green;' />" +
+                    "<hr style='height:2px;border:none;border-top:2px ridge green;margin-top: 0px;' />" +
                     "</p>").appendTo('#order_detail_container');
 
                 });
@@ -116,7 +130,7 @@
         <div class="container">
             <div class="row">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search Order By Mobile ." id="search_order">
+                    <input type="text" class="form-control" placeholder="根据电话号码搜索订单" id="search_order">
                     <span class="input-group-btn">
                         <button class="btn btn-success" id="search_button" type="button"
                                 onclick="search_Order_By_Mobile()">美美一搜
@@ -126,10 +140,57 @@
             </div>
             <br>
 
-            <div id="search_result">
+            <div id="search_result" class="row">
 
+            </div>
+            <div class="fixed_div row">
+
+
+                <div class="input-group row">
+                    <input id="filterName" type="text" class="form-control" placeholder="填写内容来标红"
+                           aria-describedby="basic-addon2">
+                </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block tail_script %}
+
+    <script type="text/javascript">
+        function randomString(len) {
+            len = len || 32;
+            var $chars = 'ABCDEFGHJKMNPQRSTWXYZabcdefhijkmnprstwxyz2345678';
+            var maxPos = $chars.length;
+            var pwd = '';
+            for (var i = 0; i < len; i++) {
+                pwd += $chars.charAt(Math.floor(Math.random() * maxPos));
+
+            }
+            return pwd;
+        }
+
+        function put_msg(obj) {
+            var rad = randomString(6);
+            var text = $(obj).html();
+
+            var msg = '{"msg":{"head": {"random": "' + rad + '"},"body":[{"type":0, "content":{"text":"' + text + '"}}]}}';
+            window.external.PutMsg(
+                    msg
+            );
+        }
+
+        $(function () {
+            $("#filterName").keyup(function () {
+                if ($("#filterName").val() != '') {
+                    $("span").css("background-color", "white").filter(":contains('" + ( $(this).val() ) + "')").css("background-color", "red");
+                }
+                else {
+                    $("span").css("background-color", "white");
+                }
+            })
+        });
+
+    </script>
 {% endblock %}
 
