--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -25,8 +25,8 @@
 	      <span class="caret"></span>
 	    </button>
 	    <ul class="dropdown-menu" role="menu">
-	      <li><a href="#">分享专属链接</a></li>
-	      <li><a href="#">招聘代理链接</a></li>
+	      <li><a href="#">发布特卖消息</a></li>
+	      <li><a href="#">招募子级代理</a></li>
 	    </ul>
 	  </div>
   </small>
