--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -26,7 +26,7 @@
 	    </button>
 	    <ul class="dropdown-menu" role="menu">
 	      <li><a href="#">发布特卖消息</a></li>
-	      <li><a href="#">招募子级代理</a></li>
+	      <li><a href="#">招募二级代理</a></li>
 	    </ul>
 	  </div>
   </small>
