--- a/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_stats.html
@@ -25,8 +25,8 @@
 	      <span class="caret"></span>
 	    </button>
 	    <ul class="dropdown-menu" role="menu">
-	      <li><a href="#">发布特卖消息</a></li>
-	      <li><a href="#">招募二级代理</a></li>
+	      <li><a href="/m/help/sharewx/">发布特卖消息</a></li>
+	      <li><a href="#">招募小鹿妈妈</a></li>
 	    </ul>
 	  </div>
   </small>
@@ -55,13 +55,13 @@
     {% if xlmm.agencylevel > 1 %}
         <li class="list-group-item"><p style="color:orange">账户现金(含押金): ￥<span style="font-size:26px">{{ xlmm.cash_money }}</span><a href="/m/cashout/" class="btn btn-warning" style="float:right;">提现</a></p></li>
     {% endif %}
-    <li class="list-group-item">专属链接： <b>http://xiaolu.so/m/{{ pk }}/</b></li>
+    <li class="list-group-item"><lable>专属链接：</label> <b>http://xiaolu.so/m/{{ pk }}/</b></li>
     <li class="list-group-item">推荐人数： {{ referal_num }}（<a href="/m/cashout/">详情</a>）</li>
     <li class="list-group-item">点击人数： {{ click_num }}</li>
     <li class="list-group-item"><span style="color:orange">点击补贴： {{ click_num }} * {{ click_price }} = ￥{{ click_pay }}</span>
     {% if not exam_pass %}（<a href="/sale/exam/">考试通过后生效</a>）{% endif %}</li>
     {% if active_start %}
-    <li class="list-group-item"><span style="color:green">六一点击专贴： {{ ten_click_num }} * {{ ten_click_price }} = ￥{{ ten_click_pay }}</span></li>
+    <li class="list-group-item"><span style="color:green">端午点击专贴： {{ ten_click_num }} * {{ ten_click_price }} = ￥{{ ten_click_pay }}</span></li>
     {% endif %}
     <li class="list-group-item"><span style="color:orange">订单人数： {{ order_num }}</span></li>
     <li class="list-group-item"><span style="color:orange">订单金额： ￥{{ total_value }}</span></li>
