--- a/shopmanager/flashsale/xiaolumm/templates/top_order_50_week.html
+++ b/shopmanager/flashsale/xiaolumm/templates/top_order_50_week.html
@@ -58,12 +58,13 @@
 
             <div>
                 <h4>订单（周）</h4>
+
                 <div class="row">
                     <div class="col-xs-4">
                         <a href="/m/top50/order/week/?week={{ date_dict.prev_week }}"><< 上一周</a>
                     </div>
                     <div class="col-xs-4">
-{#                        <p>{{ date_dict.target_week }}</p>#}
+                        {#                        <p>{{ date_dict.target_week }}</p>#}
                     </div>
                     <div class="col-xs-4">
                         {% if date_dict.next_week %}
@@ -71,14 +72,15 @@
                         {% endif %}
                     </div>
                 </div>
-                <table class="table table-striped">
-                   <thead>
+                <table class="table table-striped" id="mytable">
+                    <thead>
                     <th>妈妈编号</th>
                     <th>订单数量</th>
                     <th>妈妈昵称</th>
                     <th>点击数量</th>
                     <th>购买人数</th>
                     <th>转化率（百分比）</th>
+                    <th>管理员</th>
                     </thead>
                     <tbody>
                     {% for top in data %}
@@ -89,6 +91,7 @@
                             <td>{{ top.3 }}</td>
                             <td>{{ top.4 }}</td>
                             <td>{{ top.5 }}</td>
+                            <td>{{ top.6 }}</td>
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -103,5 +106,34 @@
 {% endblock %}
 
 {% block tail_script %}
-
+    <script src="{{ STATIC_URL }}jquery/jquery-2.1.1.min.js"></script>
+    <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('#mytable').dataTable({
+            //"bJQueryUI": true,
+            "bAutoWidth": false, //自适应宽度
+            "aaSorting": [[1, "asc"]],
+            "iDisplayLength": 50,
+            "aLengthMenu": [[20, 50, -1], [20, 50,"All"]],
+            //"bInfo":true,
+            //"sPaginationType": "full_numbers",
+            //"sDom": '<"H"Tfr>t<"F"ip>',
+            "oLanguage": {
+                "sLengthMenu": "_MENU_ 条",
+                "sZeroRecords": "抱歉， 没有找到",
+                "sInfo": "从 _START_ 到 _END_ /共 _TOTAL_ 条",
+                "sInfoEmpty": "没有数据",
+                "sSearch": "搜索",
+                "sInfoFiltered": "(从 _MAX_ 条数据中检索)",
+                "oPaginate": {
+                    "sFirst": "首页",
+                    "sPrevious": "前一页",
+                    "sNext": "后一页",
+                    "sLast": "尾页"
+                },
+                "sZeroRecords": "没有检索到数据",
+                "sProcessing": "<img src='/static/img/loading.gif' />"
+            }
+        });
+    </script>
 {% endblock %}
