[xlmm][flashsale][dinghuo] add more

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
@@ -83,7 +83,8 @@
             <th width="100px">图片</th>
             <th>尺寸</th>
             <th>销售数</th>
-            <th>已拍数量(有效数量)</th>
+            <th>已拍数量</th>
+            <th>库存数</th>
             <th>样品数量</th>
             <th width="150px">状态</th>
             </thead>
@@ -106,10 +107,11 @@
                                 {% endif %}
                                 <td>{{ sku.sku_name }}</td>
                                 <td><span id="sale_num_{{ sku.sku_id }}">{{ sku.sale_num }}</span></td>
-                                <td><a href="/sale/dinghuo/statsbypid/{{ product_id }}" target="_blank"
+                                <td><a href="/sale/dinghuo/statsbypid/{{ sku.product_id }}" target="_blank"
 
-                                       id="ding_huo_num_{{ sku.sku_id }}">{{ sku.ding_huo_num }} </a>({{ sku.effect_num }})
+                                       id="ding_huo_num_{{ sku.sku_id }}">{{ sku.ding_huo_num }} </a>
                                 </td>
+                            <td>{{ sku.ku_cun_num }}</td>
                                 <td>
                                     <div class="row">
                                         <div class="col-xs-8"><span id="memo_id_{{ sku.sku_id }}">{{ sku.sku_memo }}</span>
@@ -123,8 +125,6 @@
                                                 </a>
                                             {% endif %}
                                         </div>
-
-
                                     </div>
                                 </td>
                                 <td>
