--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
@@ -84,7 +84,7 @@
             <th>尺寸</th>
             <th>销售数</th>
             <th>已拍数量</th>
-            <th>库存数</th>
+            <th>上架前库存数</th>
             <th>样品数量</th>
             <th width="150px">状态</th>
             </thead>
